# study-coach

.claude/: CLAUDE.md
.claude/skills/: docx-reader.md
study-coach/: .gitignore  README.md  pyproject.toml
study-coach/data/: MATH_KB_README.md  ai_secret.example.json  config.example.json  config.json  math_knowledge_index.md  math_knowledge_points.json  syllabus.json
study-coach/data/daily/: 2026-06-12.json  2026-06-20.json  2026-06-21.json
study-coach/data/monthly/: 2026-06.json
study-coach/data/routines/: skincare.json
study-coach/data/wrong_book/: questions.json  reviews.json
study-coach/docs/: knowledge_points.md  learning-methodology.md  syllabus-guide.md
study-coach/scripts/: verify_cascade.py
study-coach/src/study_coach/: __init__.py  ai.py  cli.py  docx_utils.py  examiner.py  kp_index.py  math_matcher.py  models.py  planner.py  reporter.py  school_advisor.py  skincare.py  store.py  supervisor.py  syllabus.py  tracker.py  wrong_book.py
study-coach/src/study_coach.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
study-coach/src/study_coach/web/: __init__.py  server.py
study-coach/src/study_coach/web/static/: app.js  index.html  style.css
study-coach/src/study_coach/web/static/tabs/: exam.js  overview.js  plan.js  today.js  wrongbook.js
