[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "study-coach"
version = "0.1.0"
description = "A supervisory CLI agent for graduate exam preparation"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
    "anthropic>=0.40.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24.0",
]

[project.scripts]
study-coach = "study_coach.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
